webApp/css/styles.css
/* #region GENERAL STYLINGS */
* {
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
  font-weight: 100;
  margin: 0;
}

main {
  width: 100%;
  background-color: #ffffff;
}

.section-title {
  display: inline-block;
  width: 100%;
  text-transform: uppercase;
  margin-right: auto;
  padding-left: .8em;
  padding-top: .8em;
  font-weight: bold;
}
/* #endregion */

/* #region GRID */
.grid-container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto;
  grid-template-areas:
    "header"    
    "navigation"
    "dash-empty"
    "main";
}

.traffic,
.daily,
.users-mobile,
.social-statistics,
.members,
.recent-activity,
.message {
  border-bottom: 2px solid #dddddd;  
}

.widget-container-full,
.widget-container-half {
  width: 100%;
}

header {
  grid-area: header;
}

nav {
  grid-area: navigation;
}

.dash-empty-header {
  grid-area: dash-empty;
}

main {
  grid-area: main;
  display: grid;
}
/* #endregion */

/* #region HEADER & NOTIFICATION ICON (POP-UPS) */
.site-header {
  display: flex;
  align-items: center;
  background-color: #7477bf;
  color: #ffffff;
}
.site-header h1 {
  font-size: 1.5em;
  margin-left: 0.6em;
  margin-top: 0.4em;
}

.bold-font {
  font-weight: 500;
}

.bell-icon-container {
  position: relative;
  flex-basis: 2.8em;
  margin-left: auto;
  padding-right: 1em; 
}

#notifications-alert {
  position: absolute;
  background-color: #90ee90; 
  height: 5px;
  width: 5px;
  border-radius: 50%;
  top: 0;
  right: 12px;   
}

.bell-icon:hover {
  animation: swing 0.5s ease-in-out 0s forwards;
  animation-iteration-count: 1;
}

@keyframes swing {
  0% {
    transform: rotate(0deg);
  }

  20% {
    transform: rotate(20deg);
  }

  40% {
    transform: rotate(-10deg);
  }

  60% {
    transform: rotate(15deg);
  }

  80% {
    transform: rotate(-15deg);
  }

  100% {
    transform: rotate(0deg);
  }
}

.vertical-line {
  display: inline-block;
  border-left: 2px solid #8c8fbf;
  height: 50px;
  margin-top: 1em;
  margin-bottom: 1em;
  padding-top: 0.625em;
}

.profile-Img {
  width: 50px;
  border-radius: 50%;
  margin-left: .5em;
  margin-right: .5em;
}

.site-header h3 {
  font-size: .85em;
  margin-right: 1em;
}
/* #endregion */

/* #region NAVIGATION */
.sidebar-nav {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 15px;
  background-color: #4d4c72;
}

.sidebar-nav img {
  margin: 0.9375em .8em;
  align-items: center;
}

.sidebar-nav a {
  width: 4rem;
}
/* #endregion */

/* #region DASHBOARD-TAB & ALERT BANNER*/
.dashboard-empty {
  display: flex;
  align-items: center;
  height: 4rem;
}

.dashboard-start {
  font-size: 1.5em;
  padding: 1rem 1rem 0 1rem;
  height: 4rem;
  text-align: center;
  color: black;
  font-weight: 600;
}

.empty-block {
  display: flex;
  align-items: center;
  width: 100%;
  height: 4rem;
  background-color: #f7f7f7;
}

#alert {
  background-color: #7477bf;
  color: #f2f2f2;
  margin: 1em;
  height: 50px;
  line-height: 30px;
  padding-left: 15px;
  border-radius: 5px;
  font-size: 1em;
}

.alert-banner {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.alert-banner p {
  padding-top: 10px;
  padding-bottom: 10px;
}

.alert-banner-close {
  padding-right: 15px;
}
/* #endregion */

/* #region TRAFFIC CHART */
.traffic-container {
  margin-top: .5em;
}

.traffic-nav {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 1.5em;
  margin-top: 10px;
  gap: 5px;
}

.traffic-nav-link {
  color: inherit;
  list-style-type: none;
  letter-spacing: .8px;
  font-weight: 400;
  font-size: 15px;
}

.traffic-nav li {
  padding: 6px 6px;
  cursor: pointer;  
}

.active {
  background-color: #81c98f;
  border-radius: 45px;
  color: #fafdfb;
}
/* #endregion */

/* #region CHART WIDGETS SIZING/POSITIONING */
/* Charts.js....that's gonna take some studying and figuring out that stuff */
#traffic-chart,
#daily-chart,
#usersMobile-chart {
  padding: 1.5em;
}
canvas {
  max-width: 100%;
}
/* #endregion */

/* #region SOCIAL STATISTICS */
.social-container {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  align-items: center;
  gap: 15px;
  margin: 1em;
}

.sub-section {
  display: flex;
  width: 100%;
  justify-content: flex-start;
  align-items: center;
  background-color: #f5f5f5;
  border: 1px solid #cccccc;
  padding: 20px 20px;
  border-radius: .5em;
}

.social-image {
  background-color: #7477bf;
  border-radius: 50%;
  padding: 18px;
}

.social-icon {
  background-color: #7477bf;
  width: 50px;
  fill: white;
  border-radius: 50%;
}

.facebook {
  background-color: white;
  fill: #7477bf;
  border-radius: 50%;  
}

.google {
  border-radius: 50%;
  background-color: #7477bf;
}

.goog {
  background-color: #7477bf;
  fill: grey;
}

.social-text {
  margin-left: 20px;
  color: #777777;
}

.social-name {
  color: #6366b7;
  font-size: 1.5em;
  font-weight: 400;
}

.social-stats {
  margin: 0;
  font-size: 2.5em;
  font-weight: 300;
}
/* #endregion */

/* #region MEMBERS & MEMBERS ACTIVITY */
.members-email {
  text-decoration: none;
  color: #7477bf;
  font-weight: 400;
}

.member-section {
  display: flex;
  flex-direction: column;
  margin-left: 1em;
  margin-right: 1em;
  text-align: center;
  border-bottom: 2px solid #cccccc;
  padding-top: 1em;
  padding-bottom: 1em;
}

.last-member {
  border: none;
}

.member-section img {
  border-radius: 50%;
  width: 5rem;
  height: 5rem;
}

.member-section p {
  margin: 3px 0;
  font-weight: 400;
}

.carrot {
  display: none;
}

.member-info span {
  font-weight: bold;
}
/* #endregion */

/* #region MESSAGE USERS SECTION */
.widget-container {
  display: flex;
  flex-direction: column;
  margin-left: 1em;
  margin-right: 1em;
  gap: 15px;
}

form {
  padding-top: 1em;
}

.message {
  padding-bottom: 1em;
}

.form-field,
.form-area {
  background-color: #f5f5f5;
  border-color: #cccccc;
  border-radius: 5px;
}

.form-field {
  width: 100%;
  height: 45px;
  padding: 10px; 
  border: 1px solid rgba(61, 53, 53, 0.2);
}

.form-area {
  height: 170px;
}

textarea {
  padding: 10px;
}

.button-primary {
  height: 45px;
  background-color: #7477bf;
  border: none;
  border-radius: 5px;
  color: #ffffff;  
}

::placeholder {
  color: #bcbcbc;
}

/* Inserted code from: https://www.w3schools.com/howto/howto_js_autocomplete.asp */
.autocomplete {
  position: relative;
  display: inline-block;
}

.autocomplete-items {
  position: absolute;
  border: 1px solid #d4d4d4;
  border-bottom: none;
  border-top: none;
  z-index: 99;
  /*position the autocomplete items to be the same width as the container:*/
  top: 100%;
  left: 0;
  right: 0;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff;
  border-bottom: 1px solid #d4d4d4;
}

.autocomplete-items div:hover {
  /*when hovering an item:*/
  background-color: #7477bf;
}

.autocomplete-active {
  /*when navigating through the items using the arrow keys:*/
  background-color: #7477bf !important;
  color: #ffffff;
}
/* end inserted code */
/* #endregion */

/* #region TOGGLE SWITCHES */
.toggles {
  display: flex;
  margin: auto;
  align-items: center;
}

.switch-ios {
  width: 6em;
  height: 2em;
  text-transform: uppercase;
  outline-style: none;
}

.switches-container {
  margin-left: 1em;
  margin-right: 1em;
  margin-top: 1.5em;
}

#on {
  background-color: #7477bf;  
}

#on2 {
  background-color: #7477bf;  
}

.toggles  p{
  flex: 0 0 205px;
  margin-right: 1em;
  font-weight: 400;
}

.switch2 {
  margin-top: 2em;
}
/* #endregion */

/* #region SETTINGS SECTION */

/* #region TIMEZONE DROPDOWN */
.timezone {
  margin-left: 1em;
  margin-right: 1em;
  margin-top: 2.5em;
}

#timezone {
  width: 100%;
  margin-bottom: 1em;
}
/* #endregion */

/* #region SETTINGS BUTTONS */
.buttons-settings {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.buttons-settings button {
  text-transform: uppercase;
  width: 47%;
  border-radius: 5px;
  height: 2.6875rem;
  margin-bottom: 1em;
  letter-spacing: 1px;
  font-weight: 400;
  color: #f5f5fa;
  transition: 0.1s all;
  border: #f5f5fa;
}

.button-save {
  background-color: #7477bf; 
}

#cancel {
  background-color: #999999;
}

button:active {
  box-shadow: inset 0 0 10px white;
}
/* #endregion */
/* #endregion */

/* #region MEDIA QUERY (768px) */
@media (min-width: 768px) {
  /* #region GLOBAL GRID LAYOUT */
  .grid-container {
    grid-template-columns: 75px 1fr;
    grid-template-areas: 
        "header header" 
        "navigation dash-empty" 
        "navigation main";
  }

  main {
    grid-template-columns: 50%;   
  }

  nav .sidebar-nav {
    flex-direction: column;
    justify-content: flex-start;
    height: 100%;
  }

  .traffic,
  .social-statistics,
  .members,
  .recent-activity,
  .message,
  .settings {
    grid-column: 1 / span 2;
  }

  .daily {
    grid-column: 1 / span 1;
  }

  .users-mobile {
    grid-column: 2 / span 1;
  }

  .daily {
    border-right: 2px solid #dddddd;
  }

  /* Not sure what's going on, but this code is causing the chart only to fill only two-thirds of the chart space, study guide shows to use width: 90vw...but if you add the responsive option to the option chain, the 100% works appropriately...wth?
  https://www.chartjs.org/docs/2.7.2/general/responsive.html - NOTE: !important - I tried this with secondary code targeting the canvas...that did not work either, so I removed 90vw code block and it worked, so I just changed it to width: 100% after adding responsive: true to the option chain in app.js. In addition, fiddled with the aspect ratios as well. */
  /* .widget-container-full {
    width: 90vw;
  } */
  .widget-container-full {
    width: 100%;
  }

  .widget-container-half {
    width: 90%;
  }
  /* #endregion */

  /* #region TRAFFIC CHART (MQ: 768px) */
  .traffic-container {
    display: inline-flex;
    justify-content: space-between;
    width: 100%;
  }

  /* .non-mobile {
    margin-right: 145%;
  } */

  .traffic-nav li {
    font-size: 1.1em;
  }  
  /* #endregion */

  /* #region SOCIAL MEDIA STATISTICS (MQ: 768px) */
  .social-container {  
    display: flex;  
    flex-wrap: nowrap;
    flex-direction: row;    
    justify-content: center;
    gap: 15px;    
    padding-top: .5em;
  }
  /* #endregion */

  /* #region MEMBERS & MEMBERS ACTIVITY (MQ: 768px) */
  .member-section {   
    flex-direction: row;    
    justify-content: space-between;
    align-items: center;  
  }

  .member-info {
    display: flex;
    align-items: center;
    text-align: left;
    font-weight: 300;
    line-height: 1em;
    font-size: .9rem;
  }

  .member-section img {
    margin-right: 10px;
    height: 3rem;
    width: 3rem;
    letter-spacing: .5px;
  }

  .carrot {
    display: inherit;
    font-size: 1.5em;
  }
  /* #endregion */
}
/* #endregion */

/* #region MEDIA QUERY (1024px) */
@media (min-width: 1024px) {
  main {
    grid-template-columns: 50%;
  }

  .members,
  .message {
    grid-column: 1 / span 1;
    border-right: 2px solid #dddddd;
  }

  .recent-activity,
  .settings {
    grid-column: 2 / span 1;
  }
  
  .message {
    border-bottom: none;
  }

  .timezone-container {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin-top: 5em;
  }
}
/* #endregion */

